--- a/force-app/main/default/lwc/platformDevCertCalculator/platformDevCertCalculator.html
+++ b/force-app/main/default/lwc/platformDevCertCalculator/platformDevCertCalculator.html
@@ -41,10 +41,10 @@
         </div>
         <!-- Display results -->
         <div slot="footer">
-            <h1 class="resultText">Certification Result</h1>
-            <p>Certification Score: <span class="scoreText">{certificationScore}%</span></p>
-            <ul class="resourceList">
-                <li>
+            <h1 class="slds-text-heading_large slds-text-title_bold slds-text-title_caps">Certification Result</h1>
+            <p class="slds-text-heading_medium">Certification Score: <span class="slds-text-color_destructive">{certificationScore}%</span></p>
+            <ul class="slds-text-align_left slds-text-heading_small slds-p-top_medium">
+                <li class="slds-text-title_bold">
                     Resources:
                 </li>
                 <li>
