--- a/force-app/main/default/lwc/platformDevCertCalculator/platformDevCertCalculator.html
+++ b/force-app/main/default/lwc/platformDevCertCalculator/platformDevCertCalculator.html
@@ -1,6 +1,8 @@
 <template>
-    <lightning-card  title="PD1 Calculator">
+    <lightning-card title="PD1 Calculator">
+
         <!-- Process -->
+
         <lightning-button
             variant="brand"
             label="Calculate"
@@ -8,7 +10,9 @@
             slot="actions"
             onclick={calculateScore}
         ></lightning-button>
+
         <!-- Input information -->
+
         <div class="slds-p-horizontal_small">
             <lightning-input
                 type="number" 
@@ -39,18 +43,45 @@
                 onchange={handleChange}
             ></lightning-input>
         </div>
+
         <!-- Display results -->
+
         <div slot="footer">
             <h1 class="slds-text-heading_large slds-text-title_bold slds-text-title_caps">Certification Result</h1>
             <p class="slds-text-heading_medium">Certification Score: <span class="slds-text-color_destructive">{certificationScore}%</span></p>
-            <ul class="slds-text-align_left slds-text-heading_small slds-p-top_medium">
-                <li class="slds-text-title_bold">
-                    Resources:
-                </li>
-                <li>
-                    <a href="https://trailhead.salesforce.com/en/credentials/platformdeveloperi">PD1 Exam Guide</a>
-                </li>
-            </ul>
+            
+            <div>
+                <h1 class="slds-text-heading_large">Previous Attempt</h1>
+                <lightning-tabset> <!-- making it tabular -->
+                    <div for:each={attemptHistory} for:item="attempt" key={attempt.Id}>
+                            <lightning-tab label={attempt.Id}>
+                                <c-score-information
+                                    score={attempt.Score}
+                                    attempt-id={attempt.Id}
+                                    number-of-questions={numberOfQuestions}
+                                    ondeleteattempt={deleteAttemptHandler}
+                                ></c-score-information> <!-- calling child component -->
+                            </lightning-tab>
+                    </div>
+            </lightning-tabset>
+            </div>
+            
+            <template lwc:if={showResources}> <!-- if didn't pass, show resources -->
+                <ul class="slds-text-align_left slds-text-heading_small slds-p-top_medium">
+                    <li class="slds-text-title_bold">
+                        Resources:
+                    </li>
+                    <li>
+                        <a href="https://trailhead.salesforce.com/en/credentials/platformdeveloperi">PD1 Exam Guide</a>
+                    </li>
+                </ul>
+            </template>
+            <template lwc:elseif={showGoodJob}> <!-- if pass, show good job -->
+                <p>You are ready for your first developer job!</p>
+            </template>
+            <template lwc:else> <!-- else, show statement below -->
+                <p>Press calculate to see your score.</p>
+            </template>
         </div>
     </lightning-card>
 </template>
