--- a/force-app/main/default/lwc/platformDevCertCalculator/platformDevCertCalculator.html
+++ b/force-app/main/default/lwc/platformDevCertCalculator/platformDevCertCalculator.html
@@ -74,6 +74,12 @@
                     <li>
                         <a href="https://trailhead.salesforce.com/en/credentials/platformdeveloperi">PD1 Exam Guide</a>
                     </li>
+                    <li>
+                        <a href="https://focusonforce.com/courses/salesforce-certified-platform-developer-1-exams">Focus On Force</a>
+                    </li>
+                    <li>
+                        <a href="https://courses.salesforcementor.com/p/salesforce-development-apex-fundamentals">Salesforce Mentor</a>
+                    </li>
                 </ul>
             </template>
             <template lwc:elseif={showGoodJob}> <!-- if pass, show good job -->
